--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<h2>Bringing people together.</h2>
 								<p> It's like Linkedin and Tinder combined-meet up with people that you would love to
 									work with and could become lifelong friends with. </p>
-								<a href="https://palp.tech/#/register" class="learn_more2">Sign up</a>
+								<a href="https://user.palp.tech/#/register" class="learn_more2">Sign up</a>
 							</div>
 						</div>
 						<div class="col-lg-7 col-sm-5"> </div>
